--- a/src/br/com/ufrpeuag/gastromaster/ui/Mesas.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/Mesas.fxml
@@ -139,6 +139,7 @@
                      </children>
                   </GridPane>
                   <Label style="-fx-font-size: 20;" text="Pedidos" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="mudarDisponibilidade" layoutX="5.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleMudarDisponibilidade" style="-fx-background-color: #333333; -fx-border-color: #666666;" text="Mudar Disponibilidade" />
                </children>
             </AnchorPane>
         </items>
