--- a/src/br/com/ufrpeuag/gastromaster/ui/TelaRelatorios.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/TelaRelatorios.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="800.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane prefHeight="400.0" prefWidth="800.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrpeuag.gastromaster.ui.TelaRelatoriosControlador">
    <children>
-      <ComboBox prefWidth="150.0" promptText="Ano" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="60.0" />
-      <ComboBox prefWidth="150.0" promptText="Mês" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="100.0" />
-      <Button layoutX="10.0" layoutY="143.0" mnemonicParsing="false" text="Gerar Gráfico" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="143.0" />
+      <ComboBox fx:id="anos" prefWidth="150.0" promptText="Ano" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="60.0" />
+      <ComboBox fx:id="meses" prefWidth="150.0" promptText="Mês" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="100.0" />
+      <Button fx:id="gerarGrafico" layoutX="10.0" layoutY="143.0" mnemonicParsing="false" onAction="#handleGerarGrafico" text="Gerar Gráfico" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="143.0" />
+      <Button fx:id="gerarGraficoAnual" layoutX="10.0" layoutY="361.0" mnemonicParsing="false" onAction="#handleGerarGraficoAnual" text="Gráfico Anual" />
    </children>
 </AnchorPane>
