--- a/base16-google-dark.css
+++ b/base16-google-dark.css
@@ -98,3 +98,121 @@
     -fx-font-size: 12pt;
     -fx-font-family: "Segoe UI Semibold";
 }
+
+.button {
+    -fx-border-color: #e2e2e2;
+    -fx-border-width: 2;
+    -fx-background-radius: 0;
+    -fx-background-color: #1d1d1d;
+    -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+    -fx-font-size: 11pt;
+    -fx-text-fill: #d8d8d8;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
+}
+
+.button:hover {
+    -fx-background-color: #3a3a3a;
+}
+
+.button:pressed, .button:default:hover:pressed {
+  -fx-background-color: white;
+  -fx-text-fill: #1d1d1d;
+}
+
+.button:focused {
+    -fx-border-color: white, white;
+    -fx-border-width: 1, 1;
+    -fx-border-style: solid, segments(1, 1);
+    -fx-border-radius: 0, 0;
+    -fx-border-insets: 1 1 1 1, 0;
+}
+
+.button:disabled, .button:default:disabled {
+    -fx-opacity: 0.4;
+    -fx-background-color: #1d1d1d;
+    -fx-text-fill: white;
+}
+
+.button:default {
+    -fx-background-color: -fx-focus-color;
+    -fx-text-fill: #ffffff;
+}
+
+.tab-pane .tab-selected-line {
+    -fx-stroke: white;
+    
+}
+
+.tab-pane .tab-header-area .jfx-ripple {
+    -jfx-ripple-fill: #444444;
+
+}
+
+
+#vb-sidebar 
+.sidebar-button {
+    
+    -fx-background-color:green;
+    
+    -fx-text-fill: white;
+    
+    -fx-cursor:hand;
+
+}
+
+
+#vb-sidebar 
+
+.sidebar-button:hover {
+
+    -fx-background-color:#33ff33;
+
+    -fx-text-fill: green;
+
+    -fx-cursor:hand;
+
+}
+
+
+#vb-sidebar 
+
+.sidebar-button-active {
+
+    -fx-background-color:#33ff33;
+
+    -fx-text-fill: green;
+
+    -fx-cursor:hand;
+
+}
+
+
+#vb-sidebar 
+
+.slider-button {
+
+    -fx-background-color:#33ff33;
+
+    -fx-text-fill: green;
+
+    -fx-cursor:hand;
+
+}
+
+
+
+#vb-sidebar 
+
+.slider-button:hover {
+
+    -fx-background-color:#66ff66;
+
+    -fx-text-fill: green;
+
+    -fx-cursor:hand;
+
+}
+
+.button:default:hover {
+    -fx-background-color: derive(-fx-focus-color,30%);
+}
