--- a/src/br/com/ufrpeuag/gastromaster/ui/Mesa.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/Mesa.fxml
@@ -32,7 +32,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button defaultButton="true" layoutX="295.0" layoutY="135.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: #444444; -fx-border-color: #444444;" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="600.0">
+      <Button defaultButton="true" layoutX="295.0" layoutY="135.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: #444444; -fx-border-color: #444444;" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="500.0">
          <graphic>
             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -41,7 +41,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: #444444; -fx-border-color: #444444;" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="600.0">
+      <Button fx:id="pagar" mnemonicParsing="false" onAction="#handlePagar" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: #444444; -fx-border-color: #444444;" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="500.0">
          <graphic>
             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -50,7 +50,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="pedir" alignment="CENTER" layoutX="216.0" layoutY="31.0" mnemonicParsing="false" onAction="#handleFazerPedido" prefHeight="48.0" prefWidth="93.0" style="-fx-background-color: #444444;" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="600.0">
+      <Button fx:id="pedir" alignment="CENTER" layoutX="216.0" layoutY="31.0" mnemonicParsing="false" onAction="#handleFazerPedido" prefHeight="48.0" prefWidth="93.0" style="-fx-background-color: #444444; -fx-border-color: #444444;" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="490.0">
          <font>
             <Font name="Gill Sans Ultra Bold Condensed" size="12.0" />
          </font>
@@ -64,7 +64,7 @@
                </effect>
             </ImageView>
          </graphic></Button>
-      <Label layoutX="730.0" layoutY="261.0" text="Realizar Pedido" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="580.0" />
+      <Label layoutX="730.0" layoutY="261.0" text="Realizar Pedido" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="480.0" />
       <Label text="Detalhes da Mesa:" AnchorPane.bottomAnchor="110.0" AnchorPane.rightAnchor="180.0" />
       <GridPane layoutX="487.0" layoutY="290.0" prefHeight="87.0" prefWidth="303.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="0.0">
         <columnConstraints>
@@ -82,7 +82,7 @@
             <Label text="Valor:" GridPane.rowIndex="2" />
             <Label text="00" GridPane.columnIndex="1" />
             <Label text="00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="valor" text="00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Label layoutX="600.0" layoutY="5.0" style="-fx-font-size: 20;" text="Pedidos" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="5.0" />
