--- a/src/br/com/ufrpeuag/gastromaster/ui/TelaFuncionarios.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/TelaFuncionarios.fxml
@@ -92,7 +92,7 @@
                                     </GridPane>
                                     <HBox spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                        <children>
-                                          <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                                          <Button fx:id="cadastrarGerente" mnemonicParsing="false" onAction="#handleCadastarGerente" style="-fx-background-color: #444444; -fx-border-color: #444444;">
                                              <graphic>
                                                 <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -101,7 +101,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                                          <Button fx:id="alterarGerente" mnemonicParsing="false" onAction="#handleAlterarGerente" style="-fx-background-color: #444444; -fx-border-color: #444444;">
                                              <graphic>
                                                 <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
