--- a/src/br/com/ufrpeuag/gastromaster/ui/GarcomAlterar.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/GarcomAlterar.fxml
@@ -9,14 +9,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrpeuag.gastromaster.ui.GarcomControlador">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrpeuag.gastromaster.ui.GarcomControladorAlterar">
    <children>
-      <GridPane prefHeight="344.0" prefWidth="570.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+      <GridPane prefHeight="351.0" prefWidth="570.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -41,23 +42,25 @@
             <Label text="Número:" GridPane.rowIndex="8" />
             <Label text="CEP:" GridPane.rowIndex="9" />
             <Label text="Salário:" GridPane.rowIndex="10" />
+            <Label text="Senha:" GridPane.rowIndex="11" />
             <TextField fx:id="nomeFieldGarcom" prefHeight="20.0" prefWidth="285.0" promptText="Nome" style="-fx-font-size: 11;" GridPane.columnIndex="1" />
-            <TextField fx:id="cpfFieldGarcom" layoutX="295.0" layoutY="12.0" prefHeight="20.0" prefWidth="285.0" promptText="CPF" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="cpfFieldGarcom" layoutX="295.0" layoutY="12.0" prefHeight="20.0" prefWidth="285.0" promptText="Preencha o campo apenas se desejar alterar" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="dataNascFieldGarcom" layoutX="295.0" layoutY="39.0" prefHeight="20.0" prefWidth="285.0" promptText="Data de Nascimento" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="telefoneFieldGarcom" layoutX="295.0" layoutY="66.0" prefHeight="20.0" prefWidth="285.0" promptText="Telefone" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="emailFieldGarcom" layoutX="295.0" layoutY="93.0" prefHeight="20.0" prefWidth="285.0" promptText="Email" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="cidadeFieldGarcom" layoutX="295.0" layoutY="120.0" prefHeight="20.0" prefWidth="285.0" promptText="Cidade" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField fx:id="bairroFieldGarcom" layoutX="295.0" layoutY="147.0" prefHeight="20.0" prefWidth="285.0" promptText="Bairro" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <TextField fx:id="ruaFieldGarcom" layoutX="295.0" layoutY="174.0" prefHeight="20.0" prefWidth="285.0" promptText="Rua" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <TextField fx:id="numeroFieldGarcom" layoutX="295.0" layoutY="201.0" prefHeight="20.0" prefWidth="285.0" promptText="Número" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="numeroFieldGarcom" layoutX="295.0" layoutY="201.0" prefHeight="20.0" prefWidth="285.0" promptText="Número" style="-fx-font-size: 11;" text="0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <TextField fx:id="cepFieldGarcom" layoutX="295.0" layoutY="228.0" prefHeight="20.0" prefWidth="285.0" promptText="CEP" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-            <TextField fx:id="salarioFieldGarcom" layoutX="295.0" layoutY="255.0" prefHeight="20.0" prefWidth="285.0" promptText="Salário" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <TextField fx:id="salarioFieldGarcom" layoutX="295.0" layoutY="255.0" prefHeight="20.0" prefWidth="285.0" promptText="Salário" style="-fx-font-size: 11;" text="0.10" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <TextField fx:id="senhaFieldGarcom" layoutX="295.0" layoutY="282.0" prefHeight="20.0" prefWidth="285.0" promptText="Senha" style="-fx-font-size: 11;" GridPane.columnIndex="1" GridPane.rowIndex="11" />
          </children>
       </GridPane>
-      <Label layoutX="146.0" layoutY="10.0" text="Garçom" AnchorPane.leftAnchor="146.0" AnchorPane.topAnchor="10.0" />
+      <Label layoutX="158.0" layoutY="4.0" text="Garçom" AnchorPane.leftAnchor="158.0" AnchorPane.topAnchor="4.0" />
       <HBox spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0">
          <children>
-            <Button fx:id="cadastrarGarcom" mnemonicParsing="false" onAction="#handleConcluirGarcom" text="Concluir" />
+            <Button fx:id="concluirAlterarGarcom" mnemonicParsing="false" onAction="#handleConcluirEdicao" text="Concluir" />
             <Button fx:id="cancelarGarcom" mnemonicParsing="false" onAction="#handleCancelar" style="-fx-background-color: #7f1215;" text="Cancelar" />
          </children>
       </HBox>
