--- a/src/br/com/ufrpeuag/gastromaster/ui/TelaFuncionarios.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/TelaFuncionarios.fxml
@@ -199,7 +199,7 @@
                                     </GridPane>
                                     <HBox spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                        <children>
-                                          <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                                          <Button fx:id="cadastrarGarcom" mnemonicParsing="false" onAction="#handleCadastarGarcom" style="-fx-background-color: #444444; -fx-border-color: #444444;">
                                              <graphic>
                                                 <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -208,7 +208,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                                          <Button fx:id="alterarGarcom" mnemonicParsing="false" onAction="#handleAlterarGarcom" style="-fx-background-color: #444444; -fx-border-color: #444444;">
                                              <graphic>
                                                 <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
