--- a/src/br/com/ufrpeuag/gastromaster/ui/Mesas.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/Mesas.fxml
@@ -1,66 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="800.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="800.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrpeuag.gastromaster.ui.TodasMesasControlador">
    <children>
-      <VBox layoutX="89.0" layoutY="165.0" prefHeight="128.0" prefWidth="149.0">
-         <children>
-            <Label text="00">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets left="67.0" />
-               </VBox.margin>
-            </Label>
-            <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
-               <graphic>
-                  <ImageView fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@icons/mesa-cor.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </VBox>
-      <HBox spacing="20.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
-               <graphic>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@icons/mais.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
-               <graphic>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@icons/editar.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: #444444; -fx-border-color: #444444;">
-               <graphic>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@icons/menos.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </HBox>
+      <SplitPane dividerPositions="0.37" prefHeight="400.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #444444;">
+               <children>
+                  <HBox spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                     <children>
+                        <Button fx:id="cadastrarMesa" mnemonicParsing="false" onAction="#handleCadastarMesa" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@icons/mais.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="alterarMesa" mnemonicParsing="false" onAction="#handleAlterarMesa" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@icons/editar.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="deletarMesa" mnemonicParsing="false" onAction="#handleDeletarMesa" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@icons/menos.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <TableView fx:id="mesaList" prefHeight="314.0" prefWidth="292.0" style="-fx-background-color: #333333;" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="numeroColunaMesa" prefWidth="195.0" text="Número" />
+                        <TableColumn fx:id="disponibilidadeColunaMesa" prefWidth="75.0" text="Disponibilidade" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #444444;">
+               <children>
+                  <ListView fx:id="pedidoList" prefHeight="305.0" prefWidth="332.0" AnchorPane.bottomAnchor="80.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+                     <styleClass>
+                        <String fx:value="background" />
+                        <String fx:value="label" />
+                     </styleClass>
+                  </ListView>
+                  <Button fx:id="pedir" alignment="CENTER" mnemonicParsing="false" onAction="#handleFazerPedido" prefHeight="48.0" prefWidth="93.0" style="-fx-background-color: #444444; -fx-border-color: #444444;" textFill="WHITE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0">
+                     <font>
+                        <Font name="Gill Sans Ultra Bold Condensed" size="12.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="103.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@icons/prato.png" />
+                           </image>
+                           <effect>
+                              <ColorAdjust brightness="1.0" />
+                           </effect>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <HBox AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
+                     <children>
+                        <Button fx:id="pagar" mnemonicParsing="false" onAction="#handlePagar" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@icons/pagar.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="deletarPedido" defaultButton="true" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: #444444; -fx-border-color: #444444;">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@icons/menos.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <Label text="Realizar Pedido" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="12.0" />
+                  <Label text="Detalhes da Mesa:" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                  <GridPane prefHeight="87.0" prefWidth="227.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label text="Número:" />
+                        <Label text="Disponibilidade:" GridPane.rowIndex="1" />
+                        <Label text="Valor:" GridPane.rowIndex="2" />
+                        <Label fx:id="numeroLabel" text="00" GridPane.columnIndex="1" />
+                        <Label fx:id="disponibilidadeLabel" text="00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="valorLabel" text="00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     </children>
+                  </GridPane>
+                  <Label style="-fx-font-size: 20;" text="Pedidos" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
