--- a/src/br/com/ufrpeuag/gastromaster/ui/TelaHomeGarcom.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/TelaHomeGarcom.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -48,6 +49,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <Label fx:id="garcomLabel" />
                </children>
             </HBox>
          </children>
