--- a/src/br/com/ufrpeuag/gastromaster/ui/Grafico.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/Grafico.fxml
@@ -6,15 +6,14 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane prefHeight="450.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrpeuag.gastromaster.ui.GraficoControlador">
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
    <children>
-      <BarChart>
+      <BarChart fx:id="barChart" prefHeight="450.0" prefWidth="620.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <xAxis>
-          <CategoryAxis fx:id="CategoryAxies" side="BOTTOM" />
+          <CategoryAxis side="BOTTOM" fx:id="xAxis" />
         </xAxis>
         <yAxis>
           <NumberAxis fx:id="numberAxis" side="LEFT" />
