--- a/src/br/com/ufrpeuag/gastromaster/ui/TelaMesaEdicao.fxml
+++ b/src/br/com/ufrpeuag/gastromaster/ui/TelaMesaEdicao.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-
-<AnchorPane prefHeight="300.0" prefWidth="300.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="br.com.ufrpeuag.gastromaster.ui.MesasControladorEditar">
+<AnchorPane prefHeight="300.0" prefWidth="300.0" styleClass="background" stylesheets="@base16-google-dark.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrpeuag.gastromaster.ui.MesasControladorEditar">
    <children>
       <Label text="Número" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="105.0" />
       <TextField fx:id="numeroFieldMesa" prefHeight="33.0" prefWidth="205.0" promptText="Número" style="-fx-font-size: 11;" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="100.0" />
@@ -15,7 +14,6 @@
       <HBox spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="20.0">
          <children>
             <Button fx:id="concluirMesaEdicao" mnemonicParsing="false" onAction="#handleConcluirEdicao" text="Concluir" />
-            <Button fx:id="cancelarGerente" mnemonicParsing="false" onAction="#handleCancelar" style="-fx-background-color: #7f1215;" text="Cancelar" />
          </children>
       </HBox>
    </children>
